loading data partially

--- a/src/app/pages/apps/contacts/components/contacts-card/contacts-card.component.html
+++ b/src/app/pages/apps/contacts/components/contacts-card/contacts-card.component.html
@@ -15,9 +15,9 @@
 
     <div class="body-2 text-secondary flex items-center justify-center">
       <mat-icon
-        class="ltr:mr-1 rtl:ml-1 icon-xs"
+        class="ltr:mr-1 rtl:ml-1 icon-xs"s
         svgIcon="mat:phone"></mat-icon>
-      <span>{{ contact.phone }}</span>
+      <span>{{ contact.phone1 }}</span>
     </div>
 
     <button
