--- a/src/app/pages/apps/contacts/contacts-table/contacts-data-table/contacts-data-table.component.html
+++ b/src/app/pages/apps/contacts/contacts-table/contacts-data-table/contacts-data-table.component.html
@@ -35,18 +35,23 @@
           </td>
         </ng-container>
 
-        <ng-container
-          *ngIf="column.type === 'image'"
-          [matColumnDef]="column.property">
+        <ng-container *ngIf="column.type === 'image'" [matColumnDef]="column.property">
           <th *matHeaderCellDef mat-header-cell mat-sort-header>
             {{ column.label }}
           </th>
           <td *matCellDef="let row" [ngClass]="column.cssClasses" mat-cell>
             <img
+              *ngIf="row[column.property]; else defaultImage"
               [src]="row[column.property]"
               class="avatar h-9 w-9 align-middle my-2" />
+            <ng-template #defaultImage>
+              <img
+                src="assets/img/avatars/noavatar.png"
+                class="avatar h-9 w-9 align-middle my-2" />
+            </ng-template>
           </td>
         </ng-container>
+
 
         <ng-container
           *ngIf="column.type === 'button'"
